@@ -1,5 +1,11 @@
 2003-03-27  Alexander Larsson  <alexl@redhat.com>
 
+	* src/file-manager/fm-list-view.c:
+	Keyboard shortcuts for context menu.
+	Don't eat CTRL-Space, that means we can't multiple-select.
+
+2003-03-27  Alexander Larsson  <alexl@redhat.com>
+
 	* docs/key_mouse_navigation.txt:
 	Update keynav docs.
 	
